--- a/week5_AyushaKarki.ipynb
+++ b/week5_AyushaKarki.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 31,
       "metadata": {
         "id": "gEsMnXrnCpxb"
       },
@@ -53,9 +53,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Viw1qSQD2VN",
-        "outputId": "e3db22ef-8c3a-4c4a-c4b4-b174dc514cef"
+        "outputId": "67d6207f-8bd4-43a9-b871-7916d5d9c93c"
       },
-      "execution_count": 16,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,9 +92,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PWXOIXYRD3Dg",
-        "outputId": "42f84ec2-d616-4689-90c9-2d95120b01af"
+        "outputId": "ba453624-dc33-4514-c533-53a7f62023d7"
       },
-      "execution_count": 17,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,9 +128,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0SACtT6vD5a6",
-        "outputId": "a4e214fe-cb45-416d-db3c-a455343e3d31"
+        "outputId": "b4c7f699-f4fc-430f-923e-ec4f5b693341"
       },
-      "execution_count": 31,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "98YVY6XHD7Yp"
       },
-      "execution_count": 19,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -176,32 +176,18 @@
     {
       "cell_type": "code",
       "source": [
-        "#To-Do-2: Create Matrices (No Bias Term)\n",
-        "# X → (n_samples × n_features)\n",
-        "# W → (n_features,)\n",
-        "# Y → (n_samples,)\n",
         "\n",
-        "print(\"Shape of X:\", X.shape)\n",
-        "print(\"Shape of Y:\", Y.shape)"
+        "# Feature matrix X ∈ R(d×n)\n",
+        "X_matrix = X.T\n",
+        "\n",
+        "# Target vector Y ∈ R(n)\n",
+        "Y_matrix = Y\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7dbTuyd9D-Cx",
-        "outputId": "1c848c25-3b7b-4875-b343-b70a39e4bacb"
+        "id": "cb5IZFulJNrL"
       },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Shape of X: (1000, 2)\n",
-            "Shape of Y: (1000,)\n"
-          ]
-        }
-      ]
+      "execution_count": 36,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -215,18 +201,29 @@
     {
       "cell_type": "code",
       "source": [
-        "#To-Do-3: Train-Test Split\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "\n",
-        "X_train, X_test, Y_train, Y_test = train_test_split(\n",
-        "    X, Y, test_size=0.2, random_state=42\n",
-        ")"
+        "#To-Do Task 3: Train–Test Split\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+        "print(\"Training samples:\", X_train.shape)\n",
+        "print(\"Testing samples:\", X_test.shape)"
       ],
       "metadata": {
-        "id": "u14TZiRPEAHQ"
+        "id": "u14TZiRPEAHQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bc7e21c6-3462-4267-cf27-e99c76a6b7b1"
       },
-      "execution_count": 21,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training samples: (800, 2)\n",
+            "Testing samples: (200, 2)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -253,7 +250,7 @@
       "metadata": {
         "id": "S8RGica3EEi8"
       },
-      "execution_count": 22,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -287,9 +284,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fMesa9BFEGhZ",
-        "outputId": "6e6bd229-3e94-4e02-c0d9-c459d8e803ee"
+        "outputId": "7622b6c2-44a7-460c-95e0-ef5a90996366"
       },
-      "execution_count": 29,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +337,7 @@
       "metadata": {
         "id": "nPH939evEIhf"
       },
-      "execution_count": 24,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -375,9 +372,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DnVnTeebEKzA",
-        "outputId": "c5a6ddb6-32f1-400b-efa5-6bc976e0880d"
+        "outputId": "9c88dd0a-f034-421e-9e83-643e57b8feb9"
       },
-      "execution_count": 25,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +405,7 @@
       "metadata": {
         "id": "YmJv88okEOEl"
       },
-      "execution_count": 34,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -433,7 +430,7 @@
       "metadata": {
         "id": "G0iMRDzjEQN8"
       },
-      "execution_count": 33,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -489,9 +486,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PjqlbCPKESAz",
-        "outputId": "1996a572-02a0-45cd-8eaf-24531f433f29"
+        "outputId": "43444b64-f5f8-44db-e972-3f861c82c6bc"
       },
-      "execution_count": 28,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,13 +503,34 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "\"\"\"To - Do - 11 - Present your finding:\n",
+        "\n",
+        "#1. Did your Model Overfitt, Underfitts, or performance is acceptable.\n",
+        "-The model did not overfit because it gives reasonable results on test data.\n",
+        "The model did not underfit because it learns the relationship between math, reading, and writing marks.All in all,The model performance is acceptable.\n",
+        "\n",
+        "#2. Experiment with different value of learning rate, making it higher and lower, observe the result.\n",
+        "-Low learning rate:\n",
+        "The model learns very slowly and takes more time to reduce error.\n",
+        "\n",
+        "High learning rate:\n",
+        "The model becomes unstable and the error may increase instead of decreasing.\n",
+        "\n",
+        "Proper learning rate:\n",
+        "The model learns smoothly and gives better predictions.\n",
+        "All in all,Choosing the correct learning rate is very important for good performance.\n",
+        "\n",
+        "\n",
+        "[Overall Conclusion:The model performs well, and a proper learning rate helps the model learn smoothly without errors.]\n",
+        "\"\"\"\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "dvWjI8UWEUH_"
-      },
-      "execution_count": 28,
-      "outputs": []
+        "id": "uvF4h1ooKO-2"
+      }
     }
   ]
 }
